# MyWidgets

./: CMakeLists.txt  README.md  main.cpp  style.qss
wgt/: BoldCheckBox.hpp  ClickableLabel.hpp  EitherCheckBox.cpp  EitherCheckBox.hpp
wgt/Plot/: Plot.cpp  Plot.hpp  PlotSettingDialog.cpp  PlotSettingDialog.hpp
